Add `resolveReferences: ["schedule"]` to `client.request` to get the full `schedule` resource within a `slot` resource.

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
                 // get Slot
                 FHIR.oauth2.ready().then(function(client) {
-                    client.request(slotQuery, {})
+                    client.request(slotQuery, {resolveReferences: ["schedule"]})
 
                     // Reject if no Slots are found
                     .then(function(data) {
