--- a/index.html
+++ b/index.html
@@ -76,8 +76,10 @@
                             </select>
                         </th>
                         <th class="slotHeader">Slot ID</th>
-                        <th class="slotHeader">Start <input type="date" id="startDate" name="startDate"></th>
-                        <th class="slotHeader">End <input type="date" id="endDate" name="endDate"></th>
+                        <th class="slotHeader">Start<input type="date" id="startDate" name="startDate"></th>
+                        <th class="slotHeader">End<input type="date" id="endDate" name="endDate"></th>
+                        <th class="slotHeader">Actor<input type="date" id="actor" name="actor"></th>
+                        <th class="slotHeader">Location<input type="date" id="location" name="location"></th>
                         <th class="slotHeader">Status</th>
                     </tr>
                     `;
@@ -87,6 +89,8 @@
                     html += '<td class="slotRow">' + slot.resource.id + '</td>';
                     html += '<td class="slotRow">' + formatDate_mmddyyyy_hhmm(slot.resource.start) + '</td>';
                     html += '<td class="slotRow">' + formatDate_mmddyyyy_hhmm(slot.resource.end) + '</td>';
+                    html += '<td class="slotRow">' + slot.resource.schedule.actor.display + '</td>';
+                    html += '<td class="slotRow">' + slot.resource.schedule.extension[0].valueReference.display + '</td>';
                     html += '<td class="slotRow"><a onclick="MakeAppointment(\'' + slot.resource.id + '\')" href="#">' + slot.resource.freeBusyType + '</a></td>';
                     html +='</tr>'
                 });
