--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
               border-collapse: collapse;
               padding: 5px;
             }
+            th.apptHeader {
+              border: 1px solid black;
+              border-collapse: collapse;
+              padding: 5px;
+            }            
             span {
                 font-family: Monaco, monospace;
                 font-size: 18px;
@@ -117,13 +122,25 @@
 
             function DrawAppointmentsTable(apptsData)
             {
-                var html = '<table class="appt">';
-                    apptsData.forEach(appt => {
+                //var html = '<table class="appt">';
+
+                var html = `
+                <table class="appt">
+                    <tr>
+                        <th class="apptHeader">Appointment Type</th>
+                        <th class="apptHeader">Practitioner</th>
+                        <th class="apptHeader">Start</th>
+                        <th class="apptHeader">End</th>
+                    </tr>
+                    `;
+                apptsData.forEach(appt => {
                     html += '<tr>';
                     html += '<td class="apptRow">' + appt.resource.type.text + '</td>';
                     appt.resource.participant.forEach(p => {
                         if(p.actor.reference != null && p.actor.reference.includes("Practitioner"))
-                            html += '<td class="apptRow">' + p.display + '</td>';
+                            html += '<td class="apptRow">' + p.actor.display + '</td>';
+                        else
+                        html += '<td class="apptRow"></td>';
                     });
                     html += '<td class="apptRow">' + formatDate_mmddyyyy_hhmm(appt.resource.start) + '</td>';
                     html += '<td class="apptRow">' + formatDate_mmddyyyy_hhmm(appt.resource.end) + '</td>';
@@ -353,8 +370,11 @@
     </head>
     <body onload="FHIR.oauth2.ready().then(function(client){GetPatientInContext(client); GetAppointmentsForPatient(client); GetSlots(client);})">
         <span class="label">Patient:&nbsp;</span><span id="patientName"></span>
+        <br>
         <div id="apptsTable"></div>
+        <br>
         <hr>
+        <br>
         <table class="fhirResource" style="width: 100%">
             <colgroup>
                <col span="1" style="width: 33%;">
