--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
               padding: 5px;
             }
             table.appt{
+              border: 1px solid black;
               border-collapse: collapse;
               font-size: 14px;
             }
