--- a/index.html
+++ b/index.html
@@ -377,6 +377,8 @@
                         }
                     );
                 }).catch(console.error);
+
+                GetAppointmentsForPatient(client);
             }
 
         </script>
